--- a/styles/index.styl
+++ b/styles/index.styl
@@ -221,10 +221,10 @@ code
   padding: 50px 0
   color: rgba(255, 255, 255, 0.5)
   a
-    color: #fff
+    color: #000
     transition: all .2s
     &:hover
-      color: #fff
+      color: #000
       transition: all .2s
   p
     margin-bottom: 10px
