--- a/styles/index.styl
+++ b/styles/index.styl
@@ -216,15 +216,15 @@ code
   font-size: .85em
   border-radius: 3px
 .themefooter
-  background-color: rgba(0, 0, 0, 1)
+  background-color: rgba(0, 0, 0, 0)
   margin-top: 80px
   padding: 50px 0
   color: rgba(255, 255, 255, 0.5)
   a
-    color: #000
+    color: #fff
     transition: all .2s
     &:hover
-      color: #000
+      color: #fff
       transition: all .2s
   p
     margin-bottom: 10px
